public/css/editor.less
/* ... */
/* apos buttons for areas */
.apos-area,
.apos-singleton
{
  position: relative;
}

.apos-area-controls
{
  position: absolute;
  top: -10px;
  left: -10px;
  z-index: 898;
}




.apos-toolbar
{
  float: right;
  display: inline-block;
  margin-top: -26px;
}

.apos-toolbar .apos-menu-label
{
  float: left;
}

.apos-toolbar .apos-menu-select
{
  margin: 0 10px;
  float: left;
}

.apos-toolbar .apos-bold-button
{
  font-weight: bold;
}

.apos-toolbar .apos-italic-button
{
  font-style: italic;
}

.apos-toolbar a:visited
{
  color: #333;
}

.apos-toolbar a.apos-code
{
  vertical-align: top;
  font-size: 16px;
  margin-top: -2px;
  font-weight: bold;
}

.apos-toolbar 
{
  i
  {
    font-size:1.1em;
    font-weight: normal;
    letter-spacing: 1px;
    display: inline-block;
  }
  .apos-button
  {
    font-size:0.85em;
    font-weight: normal;
    letter-spacing: 1px;
  }
  .apos-button,
  .apos-menu-style select
  {
    padding: 7px !important;
  }
  .apos-menu-style
  {
    padding: 0px;
    
  }

  select
  {
    font-family: 'montserratregular' !important;
    font-size: 0.9em !important;
    letter-spacing: 1px;
  }
  /* This hides the label for heading/type style */
  .apos-menu-style .apos-menu-label{ display: none; }


}

.apos-editor
{
  min-height: 400px;
  
}

.apos-editor .apos-editable
{
  .clearfix;
  min-height: 400px;
  background-color: #FFF;
  border: 1px solid rgb(221, 221, 221);
  padding: 10px;
  &:focus{outline:none;}
}

.apos-center
{
  text-align: center;
}

/* Don't know why bootstrap puts a 4 pixel margin here and hoses
  inline radio boxes, but it's not what I want */
.apos-widget-editor input[type="radio"]
{
  margin-top: 0px;
}

.apos-widget-editor .apos-requires-preview
{
  display: none;
}

.apos-widget-editor .apos-embed
{
  width: 85%;
  height: 20px;
}

.apos-widget-editor .apos-preview-button
{
  margin-left: 10px;
}

.apos-widget-preview-container
{
  margin: auto;
  margin-top: 10px;
  width: 408px;
  border: 1px solid #ccc;
  // height: 210px;
  overflow: scroll;
}

.apos-widget-preview-container .apos-widget
{
  font-size: 50%;
}

.apos-widget-preview-container .apos-one-third
{
  width: 136px;
}

.apos-widget-preview-container .apos-one-half
{
  width: 204px;
}

.apos-widget-preview-container .apos-two-thirds
{
  width: 272px;
}

.apos-widget-preview-container .apos-full
{
  width: 408px;
}

.apos-lorem
{
  text-align: left;
  font-size: 80%;
}

.apos-clear
{
  clear: both;
}

.apos-template
{
  display: none;
}

.apos-pull-quote
{
  font-size: 15px; 
  line-height: 20px; 
  font-weight: bold; 
  margin-right: 10px; 
}

.apos-editor .apos-pull-quote
{
  border: 1px dashed #ccc;
}

.apos-spinner
{
  margin-top: -1px;
  margin-left: 10px;
  display: none;
}

.apos-file-iframe {
  display: block;
  border: none;
  width: 350px;
  height: 100px;
  padding-top: 10px;
}

textarea.apos-code {
  width: 97%;
}

.apos-modal .apos-modal-body 
{
  // max-height: 450px;
}

.apos-modal-body .apos-fieldset
{
  margin-bottom: 20px;
  .clearfix;
  
  label { display: inline-block; }
}

.apos-hr
{
  margin: 10px 0;
  border-top: 1px solid @apos-grey60;
}

.apos-modal-body .apos-hr
{
  margin: 15px 0px 20px;
}

.apos-fieldset-text
{
  input, textarea
  {
    display: block;
    width: 100%;
    max-width: 385px;
    padding: 8px 8px 10px 8px;
    border: none;
  }
  textarea {height: 180px;}
}

.apos-fieldset-radio
{
  input
  {
    margin-left: 10px;
  }
}

.apos-fieldset-select
{
  .apos-menu-style
  {
    float:none;
    padding: 0px 20px 0 0;
    display: inline-block;
  }
  select { padding: 10px; }
}

.apos-fieldset-typeahead
{
  .ui-sortable
  {
    li
    {
      background-color: lighten(@apos-base, 30%);
      padding: 10px 0;
      border-bottom: 1px solid lighten(@apos-base, 35%);
      text-transform: uppercase;
      color: @apos-grey20;
      letter-spacing: 1px;
      font-size: 11px;
      
      &:hover{ cursor: move}
      &:focus, &:active{ background-color: lighten(@apos-base, 10%);}
    }
  }

  .apos-remove
  {
    background-color: lighten(@apos-base, 15%);
    padding: 9px 8px;
    margin-right: 5px;
    color: #FFF;
    &:hover{cursor: pointer; background-color: darken(@apos-base, 10%); text-decoration: none;}
  }
}

.apos-fieldset-singleton
{
  label
  {
    float: left;
  }
  .apos-area-controls
  {
    position: relative;
    top: inherit;
    left: inherit;
  }
  .apos-slideshow
  {
    max-width: 300px;
    margin: inherit;
  }
}

.apos-fieldset-icon
{
  height: 50px;
  label
  {
    visibility: hidden;
    width: 0px;
    &:before
    {
      visibility: visible;
      color: lighten(@apos-grey, 15%);
      width: auto;
      padding: 12px 14px;
      background: lighten(@apos-grey, 75%);
      font-size: 1.2em;
      width: 14px
    }
  }
  input
  {
    display: inline;
    width: inherit;
    -webkit-appearance: none;
    border: 0;
    background-color: #FFF !important;
    height: 39px;
    position: relative;
    top: -3px;
    left: -10px;
    width: 266px;
    &:focus{border:none; outline: none; background-color: #FFF;}
  }
  input:-webkit-autofill {
        -webkit-box-shadow: 0 0 0px 1000px white inset;
    }

}

.apos-fieldset-editor
{
  background-color: inherit;
  label
  {
    float:left;
    display: inline-block;
  }
  > div
  {
    float: left;
    width: 100%;
  }
  textarea
  {
    width: 80%;
    border: 0;
    min-height: 180px;
  }
  textarea{display: block; clear: both;}
}

.apos-modal .apos-modal-body .apos-position input, 
.apos-modal .apos-modal-body .apos-size input
{
  margin-left: 10px;
  margin-right: 10px;
} 

.apos-modal .apos-modal-footer
{
  margin-top: 10px;
}


.apos-modal-blackout
{
  background-color: black;
  opacity: 0.6;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0px;
  left: 0px;
  // Just below first modal, do not use >= 899 for other things please
  z-index: 899;
}
/* ... */

